--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
-    "next": "^16.0.7",
+    "axios": "^1.13.2",
     "motion": "^12.23.25",
+    "next": "^16.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.68.0",
